<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resume</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Resume Builder</string>
    <string name="hint_edit01">OMG</string>
    <string name="button_send">Send</string>
    <string name="open_resume">Open</string>
    <string name="new_resume">New</string>
    <string name="new_resume_personal_info">Personal Info</string>
    <string name="new_resume_email_hint">email@example.com</string>
    <string name="new_resume_title">New Resume</string>
    <string name="new_resume_phone_hint">Phone#</string>
    <string name="new_resume_name_hint">New Resume Name</string>
    <string name="new_resume_fullname_hint">First Last</string>
    <string name="new_resume_address_hint">Address</string>
    <string name="new_resume_city_hint">City</string>
    <string name="new_resume_cancel_button">Cancel</string>
    <string name="new_resume_continue_button">Continue</string>
    <string name="new_resume_zip_code_hint">Zip Code</string>
    <string name="settings_button">Settings</string>
	
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
