<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	<TableRow
        android:id="@+id/table_row_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
	<TableRow
        android:id="@+id/new_button_row"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/new_resume" />

    </TableRow>
	<TableRow
			    android:id="@+id/new_list_row"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:visibility="gone" >

				<ListView
				    android:id="@+id/new_list"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content" >
				</ListView>
			
			    </TableRow>
	<TableRow
			        android:id="@+id/open_button_row"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" >

				<Button
				    android:id="@+id/open_button"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/open_resume" />
			
		    </TableRow>
	<TableRow
		        android:id="@+id/open_list_row"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:visibility="gone" >

				<ListView
				    android:id="@+id/open_list"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content" >
				</ListView>
		
		    </TableRow>

</TableLayout>
